sand-macros/tests/cases/fail_function_multi_colon.rs
use sand_macros::function;

#[function("a:b:c")]
fn bad() {}

fn main() {}
